force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <!-- <externalSharingModel>ControlledByParent</externalSharingModel> -->
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>