force-app/main/default/objects/Contact/fields/BirthCity__c.field-meta.xml
<CustomField>
    <fullName>BirthCity__c</fullName>
    <label>Birth City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>