force-app/main/default/objects/Contact/fields/IsByConversion__c.field-meta.xml
<CustomField>
    <fullName>IsByConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this account is created a a result of lead conversion. False otherwise</description>
    <label>Is By Conversion</label>
    <type>Checkbox</type>
</CustomField>