force-app/main/default/objects/Contact/fields/IsPseudonymised__c.field-meta.xml
<CustomField>
    <fullName>IsPseudonymised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field concludes if the account is a pseudo account or not</description>
    <label>Is Pseudonymised</label>
    <type>Checkbox</type>
</CustomField>